fix for auto607(auto630)-Includes js plugin solution for truncating of text in a flexible container.

--- a/src/css/grabpress.css
+++ b/src/css/grabpress.css
@@ -627,6 +627,9 @@ line-height: 24px;
     box-shadow: 0px 0px 5px rgba(255, 0 , 0, 0.75);
     border-radius: 3px;
 }
+#t #b .feed_title{
+    overflow: hidden;
+}
 #t #b .accordion-inner {
      padding: 0;
 }
